<style>(<BurgerMenu.scss): z-index issue is now fixed

--- a/kinomatch/src/components/App/Header/BurgerMenu/BurgerMenu.scss
+++ b/kinomatch/src/components/App/Header/BurgerMenu/BurgerMenu.scss
@@ -16,15 +16,10 @@
 
     &-footer {
       position: absolute;
-      // display: flex;
-      // align-items: end;
       width: 100%;
       height: 40px;
-      z-index: 5;
+      z-index: 6;
       bottom: 0;
-      // left: 0;
-      // right: 0;
-      // background-color: red;
     }
 
     &__container {
@@ -33,7 +28,7 @@
       justify-content: center;
       align-items: center;
       position: fixed;
-      z-index: 5;
+      z-index: 6;
       top: 0;
       left: 0;
       width: 100%;
